node_project/templates/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  selector:
    app: jenkins
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
